Update MS details from details from data

--- a/data/references_data.bib
+++ b/data/references_data.bib
@@ -1,4 +1,12 @@
-@Misc{ANBG_2018,
+@Article{Ahrens_2019,
+  year = {2019},
+  author = {Collin W. Ahrens and Margaret E. Andrew and Richard A. Mazanec and Katinka X. Ruthrof and Anthea Challis and Giles Hardy and Margaret Byrne and David T. Tissue and Paul D. Rymer},
+  journal = {Ecology and Evolution},
+  title = {{Plant functional traits differ in adaptability and are predicted to be differentially affected by climate change}},
+  doi = {10.1002/ece3.5890},
+}
+
+@Misc{ANBG_2019,
   author = {{Australian National Botanic Garden}},
   year = {2018},
   title = {{The National Seed Bank}},
@@ -9,13 +17,6 @@
   author = {Tara Angevin},
   year = {2010},
   title = {{Unpublished data: Trait data collected via Honours project at La Trobe University}},
-}
-
-@Misc{AusGrass_2014,
-  author = {Yucely Alfonso and Bryan Simon},
-  year = {2014},
-  url = {http://ausgrass2.myspecies.info/},
-  title = {{AusGrass2: Grasses of Australia}},
 }
 
 @Misc{Barlow_1981,
@@ -36,22 +37,15 @@
   doi = {10.1.1.520.6315&rep=rep1&type=pdf},
 }
 
-@Book{BFD_1974,
-  author = {{Forest Department of Burma}},
-  year = {1974},
-  title = {{Standard nomenclature of forest plants, Burma, including commercial timbers}},
-  publisher = {Forest Research and Training Circle, Forest Department, Burma},
-}
-
-@Article{Blackman_2014,
-  author = {C. J. Blackman and S. M. Gleason and Y. Chang and A. M. Cook and C. Laws and M. Westoby},
-  year = {2014},
-  title = {{Leaf hydraulic vulnerability to drought is linked to site water availability across a broad range of species and climates}},
-  journal = {Annals of Botany},
-  volume = {114},
-  pages = {435--440},
-  publisher = {Oxford University Press (OUP)},
-  doi = {10.1093/aob/mcu131},
+@Article{Blackman_2010,
+  year = {2010},
+  author = {Christopher J. Blackman and Tim J. Brodribb and Gregory J. Jordan},
+  journal = {New Phytologist},
+  title = {{Leaf hydraulic vulnerability is related to conduit dimensions and drought resistance across a diverse range of woody angiosperms}},
+  volume = {188},
+  number = {4},
+  pages = {1113--1123},
+  doi = {10.1111/j.1469-8137.2010.03439.x},
 }
 
 @Book{Bolza_1975,
@@ -111,17 +105,6 @@
   doi = {10.1086/319579},
 }
 
-@Article{Butler_2011,
-  author = {Don W. Butler and Sean M. Gleason and Ian Davidson and Yusuke Onoda and Mark Westoby},
-  year = {2011},
-  title = {{Safety and streamlining of woody shoots in wind: An empirical study across 39 species in tropical Australia}},
-  journal = {New Phytologist},
-  volume = {193},
-  pages = {137--149},
-  publisher = {Wiley-Blackwell},
-  doi = {10.1111/j.1469-8137.2011.03887.x},
-}
-
 @Misc{CAB_2009,
   url = {http://www.cabi.org/fc/},
   title = {{Forestry Compendium}},
@@ -138,6 +121,17 @@
   pages = {1084--1096},
   publisher = {Wiley-Blackwell},
   doi = {10.1111/ddi.12225},
+}
+
+@Article{Catford_2014:1,
+  year = {2011},
+  author = {Jane A. Catford and Barbara J. Downes and Christopher J. Gippel and Peter A. Vesk},
+  journal = {Journal of Applied Ecology},
+  title = {{Flow regulation reduces native plant cover and facilitates exotic invasion in riparian wetlands}},
+  volume = {48},
+  number = {2},
+  pages = {432--442},
+  doi = {10.1111/j.1365-2664.2010.01945.x},
 }
 
 @Article{Chandler_2002,
@@ -162,22 +156,14 @@
   doi = {10.1111/j.1461-0248.2009.01285.x},
 }
 
-@Article{Chen_2015,
-  author = {Si-Chong Chen and Angela T. Moles},
-  year = {2015},
-  title = {{A mammoth mouthful? A test of the idea that larger animals ingest larger seeds}},
-  journal = {Global Ecology and Biogeography},
-  volume = {24},
-  pages = {1269--1280},
-  doi = {10.1111/geb.12346},
-}
-
-@Book{Chinh_1999,
-  title = {{Vietnam forest trees}},
-  author = {Nguy{\^e}n Ngoc Ch{\a'\i}nh},
-  year = {1999},
-  publisher = {Forest Inventory and Planning Institute Agricultural Publishing House Hanoi},
-  isbn = {19996775635},
+@Article{Chen_2017,
+  author = {{Chen} and {S.-C.} and {Cornwell} and {W.} and Zhang H.-X. & Moles and A. T.},
+  year = {2017},
+  title = {{Plants show more flesh in the tropics: variation in fruit type along latitudinal and climatic gradients.}},
+  journal = {Ecography},
+  volume = {40},
+  pages = {531--538},
+  doi = {abs/10.1111/ecog.02010},
 }
 
 @Book{Chinnock_2007,
@@ -206,11 +192,14 @@
   year = {2009},
 }
 
-@Misc{Clayton_2006,
-  author = {W.D. Clayton and M.S. Vorontsova and K.T. Harman & H. Williamson},
-  year = {2006},
-  url = {http://www.kew.org/data/grasses-db.html},
-  title = {{GrassBase - The online world grass flora}},
+@Article{Clarke_2015,
+  year = {2015},
+  author = {Peter J. Clarke and Michael J. Lawes and Brett P. Murphy and Jeremy Russell-Smith and Catherine E.M. Nano and Ross Bradstock and Neal J. Enright and Joseph B. Fontaine and Carl R. Gosper and Ian Radford and Jeremy J. Midgley and Richard M. Gunton},
+  journal = {Science of The Total Environment},
+  title = {{A synthesis of postfire recovery traits of woody plants in Australian ecosystems}},
+  volume = {534},
+  pages = {31--42},
+  doi = {10.1016/j.scitotenv.2015.04.002},
 }
 
 @Book{Cooper_2004,
@@ -220,6 +209,12 @@
   publisher = {Nokomis Editions},
   place = {Melbourne, Victoria, Australia},
   isbn = {9780958174213},
+}
+
+@Unpublished{Cornellison_0000,
+  year = {2019},
+  author = {Tatiana G. Cornelissen and Fernando A. O. Silveira and Mark J. K. Ooi {et al.}},
+  title = {{Global herbivory: how much plant tissue do insects eat?}},
 }
 
 @Misc{CPRR_2002,
@@ -248,19 +243,20 @@
   pages = {27-36},
 }
 
+@Article{Crisp_1984,
+  author = {Michael D. Crisp and Lindy Cayzer and Gregory T. Chandler and Lyn G. Cook},
+  year = {2017},
+  title = {{A monograph of Daviesia (Mirbelieae, Faboideae, Fabaceae)}},
+  journal = {Phytotaxa},
+  volume = {300},
+  pages = {1-308},
+  doi = {10.11646/phytotaxa.300.1.1},
+}
+
 @Unpublished{Cross_2011,
   author = {Erika Cross},
   year = {2011},
   title = {{Unpublished data: Woodlands of western Victoria trait database}},
-}
-
-@Article{Crsip_1984,
-  author = {M. D. Crisp},
-  year = {1984},
-  title = {{Notes on Daviesia and Jacksonia (Leguminosae: Papilionoideae) for the flora of the Perth region}},
-  journal = {Nuytsia},
-  volume = {5},
-  pages = {159-170},
 }
 
 @Article{Cunningham_1999,
@@ -317,6 +313,17 @@
   doi = {10.1111/ele.12781},
 }
 
+@Article{Dwyer_2017_2,
+  year = {2017},
+  author = {John M. Dwyer and Riah Mason},
+  title = {{Plant community responses to thinning in densely regenerating Acacia harpophylla forest}},
+  journal = {Restoration Ecology},
+  volume = {26},
+  number = {1},
+  pages = {97--105},
+  doi = {doi.org/10.1111/rec.12536},
+}
+
 @Article{Eamus_1998,
   author = {D. Eamus and H. Prichard},
   year = {1998},
@@ -340,6 +347,17 @@
 }
 
 @Article{Edwards_2000,
+  year = {2000},
+  author = {Cheryl Edwards and Jennifer Read and Gordon D. Sanson},
+  journal = {Oecologia},
+  title = {{Characterising sclerophylly: some mechanical properties of leaves from heath and forest}},
+  volume = {123},
+  number = {2},
+  pages = {158--167},
+  doi = {10.1007/s004420051001},
+}
+
+@Article{Edwards_2000:1,
   author = {Cheryl Edwards and Gordon D. Sanson and Nuvan Aranwela and Jennifer Read},
   year = {2000},
   title = {{Relationships between sclerophylly, leaf biomechanical properties and leaf anatomy in some Australian heath and forest species}},
@@ -348,6 +366,18 @@
   pages = {261--277},
   publisher = {Informa UK Limited},
   doi = {10.1080/11263500012331350445},
+}
+
+@Unpublished{Esperon-Rodriguez_0000,
+  year = {2019},
+  author = {Manuel Esperon-Rodriguez and Sally A. Power and Mark G.Tjoelker and Anthea Challis and Ren{\a'e}e M. Marchin and Paul D. Rymer},
+  title = {{Functional adaptations of urban trees along a climatic gradient.}},
+}
+
+@Misc{Esperon-Rodriguez_0000_2,
+  year = {2019},
+  author = {Manuel Esperon-Rodriguez and Sally A. Power and Mark G.Tjoelker and Paul D. Rymer},
+  title = {{Which Plant Where Living Lab}},
 }
 
 @Article{Falster_2005_1,
@@ -414,6 +444,17 @@
   doi = {10.1071/sb9950691},
 }
 
+@Article{Funk_2016,
+  year = {2016},
+  author = {Jennifer L. Funk and Rachel J. Standish and William D. Stock and Fernando Valladares},
+  journal = {Ecology},
+  title = {{Plant functional traits of dominant native and invasive species in mediterranean-climate ecosystems}},
+  volume = {97},
+  number = {1},
+  pages = {75--83},
+  doi = {10.1890/15-0974.1},
+}
+
 @Article{Gallagher_2011,
   author = {Rachael V. Gallagher and Michelle R. Leishman and Joseph T. Miller and Cang Hui and David M. Richardson and Jan Suda and Pavel Tr{\a'a}vn{\a'\i}{\v c}ek},
   year = {2011},
@@ -425,15 +466,15 @@
   doi = {10.1111/j.1472-4642.2011.00805.x},
 }
 
-@Article{Gleason_2012,
-  author = {Sean M. Gleason and Don W. Butler and Kasia Zieminska and Pawel Waryszak and Mark Westoby},
-  year = {2012},
-  title = {{Stem xylem conductivity is key to plant water balance across Australian angiosperm species}},
-  journal = {Functional Ecology},
-  volume = {26},
-  pages = {343--352},
-  publisher = {Wiley-Blackwell},
-  doi = {10.1111/j.1365-2435.2012.01962.x},
+@Article{Gardiner_2019,
+  year = {2019},
+  author = {Ronald Gardiner and Luke Shoo and John. M. Dwyer},
+  title = {{Look to seedling heights, rather than functional traits, to explain survival during extreme heat stress in the early stages of subtropical rainforest restoration}},
+  journal = {Journal of Applied Ecology},
+  volume = {56},
+  number = {12},
+  pages = {2687-2697},
+  doi = {doi.org/10.1111/1365-2664.13505},
 }
 
 @Article{Goble_1981,
@@ -454,6 +495,35 @@
   number = {9},
   pages = {406},
   isbn = {0869232940},
+}
+
+@Misc{GrassBase_2014,
+  author = {W.D. Clayton and M.S. Vorontsova and K.T. Harman & H. Williamson},
+  year = {2006},
+  url = {http://www.kew.org/data/grasses-db.html},
+  title = {{GrassBase - The online world grass flora}},
+}
+
+@InBook{Groom_1996,
+  year = {1996},
+  author = {Philip K. Groom and Byron B. Lamont},
+  booktitle = {Gondwanan Heritage},
+  title = {{Reproductive ecology of non-sprouting and re-sprouting Hakea species (Proteaceae) in southwestern Australia.}},
+  editor = {J. Chappill {S.D. Hopper M. Harvey} and A.S. George},
+  publisher = {Surrey Beatty, Chipping Norton},
+  pages = {239--248},
+  doi = {unknown},
+}
+
+@Article{Groom_2010,
+  year = {2009},
+  author = {Philip K. Groom and Byron B. Lamont},
+  journal = {Plant and Soil},
+  title = {{Phosphorus accumulation in Proteaceae seeds: a synthesis}},
+  volume = {334},
+  number = {1-2},
+  pages = {61--72},
+  doi = {10.1007/s11104-009-0135-6},
 }
 
 @Article{Gross_1993,
@@ -489,6 +559,29 @@
   doi = {10.1093/aob/mcn047},
 }
 
+@Article{Guilherme_Pereira_2018,
+  year = {2018},
+  author = {Caio Guilherme Pereira and Peta L. Clode and Rafael S. Oliveira and Hans Lambers},
+  journal = {New Phytologist},
+  title = {{Eudicots from severely phosphorus-impoverished environments preferentially allocate phosphorus to their mesophyll}},
+  volume = {218},
+  number = {3},
+  pages = {959--973},
+  doi = {10.1111/nph.15043},
+}
+
+@Article{Guilherme_Pereira_2019,
+  year = {2019},
+  author = {Caio Guilherme Pereira and Patrick E. Hayes and Odhran S. O'Sullivan and Lasantha K. Weerasinghe and Peta L. Clode and Owen K. Atkin and Hans Lambers},
+  journal = {Journal of Ecology},
+  title = {{Trait convergence in photosynthetic nutrient-use efficiency along a 2-million year dune chronosequence in a global biodiversity hotspot}},
+  volume = {107},
+  number = {4},
+  pages = {2006--2023},
+  doi = {10.1111/1365-2745.13158},
+  editor = {Susan Schwinning},
+}
+
 @Article{Harrison_2009,
   author = {Matthew T. Harrison and Everard J. Edwards and Graham D. Farquhar and Adrienne B. Nicotra and John R. Evans},
   year = {2009},
@@ -509,6 +602,29 @@
   pages = {1596--1611},
   publisher = {Wiley-Blackwell},
   doi = {10.1111/j.1365-3040.2009.02024.x},
+}
+
+@Article{Hayes_2014,
+  year = {2013},
+  author = {Patrick Hayes and Benjamin L. Turner and Hans Lambers and Etienne Laliberte},
+  journal = {Journal of Ecology},
+  title = {{Foliar nutrient concentrations and resorption efficiency in plants of contrasting nutrient-acquisition strategies along a 2-million-year dune chronosequence}},
+  volume = {102},
+  number = {2},
+  pages = {396--410},
+  doi = {10.1111/1365-2745.12196},
+  editor = {Peter Bellingham},
+}
+
+@Article{Hayes_2018,
+  year = {2018},
+  author = {Patrick E. Hayes and Peta L. Clode and Rafael S. Oliveira and Hans Lambers},
+  journal = {Plant, Cell and Environment},
+  title = {{Proteaceae from phosphorus-impoverished habitats preferentially allocate phosphorus to photosynthetic cells: An adaptation improving phosphorus-use efficiency}},
+  volume = {41},
+  number = {3},
+  pages = {605--619},
+  doi = {10.1111/pce.13124},
 }
 
 @Article{Henery_2001,
@@ -585,6 +701,12 @@
   pages = {193--200},
 }
 
+@Unpublished{Jin_0000,
+  year = {2019},
+  author = {Daniel Jin and Dieter Hochuli},
+  title = {{Urbanisation increases arthropod abundance and herbivory on a native weed}},
+}
+
 @Unpublished{Jordan_2007,
   author = {Greg Jordan},
   year = {2007},
@@ -611,17 +733,38 @@
   url = {https://florabase.dpaw.wa.gov.au/nuytsia/article/409},
 }
 
-@Misc{Kew_2010,
+@Misc{Kew_2019_1,
   author = {{Royal Botanic Gardens Kew}},
-  year = {2010},
-  title = {{Seed Information Database (SID)}},
+  year = {2019},
+  title = {{Seed Information Database (SID) and Seed Bank Database}},
   url = {http://data.kew.org/sid/},
 }
 
-@Misc{Kew_2012,
+@Misc{Kew_2019_2,
   author = {{Royal Botanic Gardens Kew}},
-  year = {2012},
-  title = {{Seed Information Database (SID)}},
+  year = {2019},
+  title = {{Seed Information Database (SID) and Seed Bank Database}},
+  url = {http://data.kew.org/sid/},
+}
+
+@Misc{Kew_2019_4,
+  author = {{Royal Botanic Gardens Kew}},
+  year = {2019},
+  title = {{Oil content data from Seed Information Database (SID) and Seed Bank Database}},
+  url = {http://data.kew.org/sid/},
+}
+
+@Misc{Kew_2019_5,
+  author = {{Royal Botanic Gardens Kew}},
+  year = {2019},
+  title = {{Seed dispersal data from the Seed Information Database (SID) and Seed Bank Database}},
+  url = {http://data.kew.org/sid/},
+}
+
+@Misc{Kew_2019_6,
+  author = {{Royal Botanic Gardens Kew}},
+  year = {2019},
+  title = {{Germination data from the Seed Information Database (SID) and Seed Bank Database}},
   url = {http://data.kew.org/sid/},
 }
 
@@ -669,6 +812,17 @@
   doi = {10.1046/j.1365-2435.2002.00631.x},
 }
 
+@Article{Lamont_2002:1,
+  year = {2015},
+  author = {Byron B. Lamont and Philip K. Groom and Matthew Williams and Tianhua He},
+  journal = {New Phytologist},
+  title = {{{LMA}, density and thickness: recognizing different leaf shapes and correcting for their nonlaminarity}},
+  volume = {207},
+  number = {4},
+  pages = {942--947},
+  doi = {10.1111/nph.13465},
+}
+
 @Article{Lawes_2012,
   author = {Michael J. Lawes and Jeremy J. Midgley and Peter J. Clarke},
   year = {2012},
@@ -680,12 +834,42 @@
   doi = {10.1111/1365-2745.12035},
 }
 
+@Article{Lawes_2012:1,
+  year = {2011},
+  author = {Michael J. Lawes and Hylton Adie and Jeremy Russell-Smith and Brett Murphy and Jeremy J. Midgley},
+  journal = {Ecosphere},
+  title = {{How do small savanna trees avoid stem mortality by fire? The roles of stem diameter, height and bark thickness}},
+  volume = {2},
+  number = {4},
+  pages = {art42},
+  doi = {10.1890/es10-00204.1},
+}
+
+@Misc{Lawson_2015,
+  year = {2015},
+  author = {James R. Lawson and Kirstie A. Fryirs and Michelle R. Leishman},
+  title = {{Data from: Hydrological conditions explain wood density in riparian plants of south-eastern Australia}},
+  doi = {10.5061/dryad.72h45},
+  publisher = {Dryad Digital Repository},
+  keywords = {determinants of plant community diversity and structure, community assembly, climate change, ecohydrology, ecological strategy, environmental unpredictability, functional traits, disturbance, riparian, wood density, south-east Australia},
+}
+
 @PhdThesis{Laxton_2005,
   author = {Emma Laxton},
   year = {2005},
   title = {{Relationship between leaf traits, insect communities and resource availability}},
   school = {Macquarie University},
   url = {http://hdl.handle.net/1959.14/483},
+}
+
+@Article{Lee_2019,
+  year = {2019},
+  author = {Marissa R. Lee and Jeff R. Powell and Brad Oberle and William K. Cornwell and Mitchell Lyons and Jessica L. Rigg and Amy E. Zanne},
+  journal = {Ecology},
+  title = {{Good neighbors aplenty: fungal endophytes rarely exhibit competitive exclusion patterns across a span of woody habitats}},
+  volume = {100},
+  number = {9},
+  doi = {10.1002/ecy.2790},
 }
 
 @Article{Leishman_1992,
@@ -698,10 +882,14 @@
   doi = {10.2307/2260687},
 }
 
-@Unpublished{Leishman_1993,
-  author = {Michelle Leishman},
-  year = {1993},
-  title = {{Unpublished data: Seed mass data for Sydney species}},
+@Article{Leishman_1993,
+  author = {{Westoby} and {M.} and {Rice} and {B.} and {Howell} and {J.}},
+  year = {1990},
+  title = {{Seed Size and Plant Growth Form as Factors in Dispersal Spectra}},
+  journal = {Ecology},
+  volume = {71},
+  pages = {1307--1315},
+  doi = {10.2307/1938268},
 }
 
 @Article{Leishman_1995,
@@ -714,23 +902,6 @@
   doi = {10.2307/2261604},
 }
 
-@Unpublished{Leishman_2011,
-  author = {Ian Davidson},
-  year = {2011},
-  title = {{Unpublished data: SLA data for 76 acacia species from glasshouse seedlings}},
-}
-
-@Article{Leishman_2011:1,
-  author = {Rachael V. Gallagher and Michelle R. Leishman and Joseph T. Miller and Cang Hui and David M. Richardson and Jan Suda and Pavel Tr{\a'a}vn{\a'\i}{\v c}ek},
-  year = {2011},
-  title = {{Invasiveness in introduced Australian acacias: the role of species traits and genome size}},
-  journal = {Diversity and Distributions},
-  volume = {17},
-  pages = {884--897},
-  publisher = {Wiley-Blackwell},
-  doi = {10.1111/j.1472-4642.2011.00805.x},
-}
-
 @Book{Lemmens_1994,
   author = {R.H.M.J. Lemmens and I. Soerjanegara},
   title = {{PROSEA, Volume 5/1: Timber Trees - Major Commercial Timbers}},
@@ -738,6 +909,18 @@
   publisher = {Pudoc/Prosea},
   place = {Wageningen},
   isbn = {9789022010334},
+}
+
+@Article{Lim_2017,
+  year = {2017},
+  author = {Felix K.S. Lim and Laura J. Pollock and Peter A. Vesk},
+  journal = {Journal of Vegetation Science},
+  title = {{The role of plant functional traits in shrub distribution around alpine frost hollows}},
+  volume = {28},
+  number = {3},
+  pages = {585--594},
+  doi = {10.1111/jvs.12517},
+  editor = {Francesco {de Bello}},
 }
 
 @Article{Lord_1997,
@@ -757,6 +940,17 @@
   title = {{Unpublished data: Trait data from various Morgan and Lunt projects 1990-2012}},
 }
 
+@Article{Lusk_2010,
+  year = {2010},
+  author = {Christopher H. Lusk and Yusuke Onoda and Robert Kooyman and Alba Guti<U+FFFD>rrez-Gir<U+FFFD>n},
+  journal = {New Phytologist},
+  title = {{Reconciling species-level vs plastic responses of evergreen leaf structure to light gradients: shade leaves punch above their weight}},
+  volume = {186},
+  number = {2},
+  pages = {429--438},
+  doi = {10.1111/j.1469-8137.2010.03202.x},
+}
+
 @Article{Lusk_2012,
   author = {C. H. Lusk and J. W. G. Kelly and S. M. Gleason},
   year = {2012},
@@ -768,18 +962,21 @@
   doi = {10.1093/aob/mcs289},
 }
 
+@Article{Lusk_2014,
+  year = {2014},
+  author = {C. H. Lusk and K. M. Sendall and P. J. Clarke},
+  journal = {Australian Journal of Botany},
+  title = {{Seedling growth rates and light requirements of subtropical rainforest trees associated with basaltic and rhyolitic soils}},
+  volume = {62},
+  number = {1},
+  pages = {48--55},
+  doi = {10.1071/bt13262},
+}
+
 @Unpublished{Manea_2011,
   author = {Anthony Manea},
   year = {2011},
   title = {{Unpublished data: Dispersal appendage data for acacia via worldwide wattle}},
-}
-
-@Book{Martawijaya_1992,
-  author = {Abdurahim Martawijaya and Iding Kartasujana and Kosasi Kadir and Soewanda Among Prawira},
-  year = {1992},
-  title = {{Indonesian wood atlas vol. I. and II}},
-  publisher = {AFPRDC AFRD Department of Forestry,},
-  place = {Bogor Indonesia},
 }
 
 @Misc{Maslin_2012,
@@ -789,11 +986,15 @@
   publisher = {Australian Biological Resources Study},
 }
 
-@PhdThesis{McCarthy_2017,
-  author = {James McCarthy},
-  title = {{Predicting the diversity and functional composition of woody plant communities under climate change}},
-  school = {University of Queensland},
-  year = {2017},
+@Article{McCarthy_2017,
+  year = {2019},
+  author = {James K. McCarthy and John M. Dwyer and Karel Mokany},
+  journal = {Proceedings of the Royal Society B: Biological Sciences},
+  title = {{A regional-scale assessment of using metabolic scaling theory to predict ecosystem properties}},
+  volume = {286},
+  number = {1915},
+  pages = {20192221},
+  doi = {10.1098/rspb.2019.2221},
 }
 
 @Misc{Meier_2007,
@@ -801,6 +1002,55 @@
   title = {{The wood database}},
   year = {2007},
   url = {http://www.wood-database.com/},
+}
+
+@Article{Mokany_2008,
+  year = {2008},
+  author = {Karel Mokany and Julian Ash},
+  title = {{Are traits measured on pot grown plants representative of those in natural communities?}},
+  journal = {Journal of Vegetation Science},
+  volume = {19},
+  pages = {119--126},
+  doi = {10.3170/2007-8-18340},
+}
+
+@Article{Moles_2000,
+  year = {2000},
+  author = {Angela T. Moles and Mark Westoby},
+  title = {{Do small leaves expand faster than large leaves, and do shorter expansion times reduce herbivore damage?}},
+  journal = {OIKOS},
+  volume = {90},
+  number = {3},
+  pages = {517--524},
+  doi = {https://doi.org/10.1034/j.1600-0706.2000.900310.x.},
+}
+
+@Article{Moles_2003,
+  year = {2003},
+  author = {Angela T. Moles and David I. Warton and Mark Westoby},
+  title = {{Seed size and survival in the soil in arid Australia}},
+  journal = {Austral Ecology},
+  volume = {28},
+  number = {5},
+  pages = {575--585},
+  doi = {doi.org/10.1046/j.1442-9993.2003.01314.x},
+}
+
+@Article{Moles_2011,
+  year = {2011},
+  author = {Angela T. Moles and Ian R. Wallis and William J. Foley and David I. Warton and James C. Stegen and Alejandro J. Bisigato and Lucrecia Cella-Pizarro and Connie J. Clark and Philippe S. Cohen and William K. Cornwell {et al.}},
+  title = {{Putting plant resistance traits on the map: a test of the idea that plants are better defended at lower latitudes}},
+  journal = {New Phytologist},
+  volume = {191},
+  number = {3},
+  pages = {777--788},
+  doi = {doi.org/10.1111/j.1469-8137.2011.03732.x},
+}
+
+@Unpublished{Moore_2019,
+  year = {2019},
+  author = {{Moore} and {B.D.} and {DeGabriel} and {J.L.}},
+  title = {{Leaf traits of the Eucalyptus series Siderophloiae}},
 }
 
 @Unpublished{Morgan_2011_1,
@@ -826,6 +1076,17 @@
   year = {2005},
   title = {{Root system architecture, water use and rainfall repsonses of perennial species}},
   school = {Macquarie University},
+}
+
+@Article{Munroe_2019,
+  year = {2019},
+  author = {{Munroe} and {S.E.M.} and {Guerin} and {G.R.} and {and Sparrow} and {B.}},
+  title = {{TERN Plant Photosynthetic Pathway Trait Dataset, version 1.0.}},
+  journal = {unknown},
+  volume = {unknown},
+  number = {unknown},
+  pages = {unknown},
+  doi = {unknown},
 }
 
 @Misc{NHNSW_2016,
@@ -854,6 +1115,12 @@
   title = {{Flora of the Darwin Region Online}},
 }
 
+@Misc{Ooi_0000,
+  year = {2007},
+  author = {Mark Ooi and Peter Myerscough and Tony Auld},
+  title = {{Longterm seed mass field campaign}},
+}
+
 @Misc{OReillyNugent_2018,
   author = {A. O'Reilly-Nugent and E. Wandrag and C.A. Catford and B. Gruber and D. Driscoll and R.P. Duncan},
   year = {2018},
@@ -861,7 +1128,7 @@
   volume = {in review},
 }
 
-@Article{Osbourne_2014,
+@Article{Osborne_2014,
   author = {C.P. Osborne and A. Salomaa and T.A. Kluyver and V. Visser and E.A. Kellogg and O. Morrone and M.S. Vorontsova and W.D. Clayton and D.A. Simpson},
   year = {2014},
   title = {{A global database of C4 photosynthesis in grasses}},
@@ -904,6 +1171,17 @@
   doi = {10.1046/j.1365-2435.2003.00761.x},
 }
 
+@Article{Prior_2003:1,
+  year = {2004},
+  author = {L. D. PRIOR and D. M. J. S. BOWMAN and D. EAMUS},
+  journal = {Functional Ecology},
+  title = {{Seasonal differences in leaf attributes in Australian tropical tree species: family and habitat comparisons}},
+  volume = {18},
+  number = {5},
+  pages = {707--718},
+  doi = {10.1111/j.0269-8463.2004.00885.x},
+}
+
 @Misc{Prospect_2009,
   url = {http://dps.plants.ox.ac.uk/ofi/prospect/index.htm},
   title = {{Prospect: The wood database}},
@@ -919,11 +1197,18 @@
   url = {http://data.kew.org/sid/},
 }
 
-@Misc{RBGSYD_2014,
+@Misc{RBGSYD_0000,
   author = {{Royal Botanic Gardens Sydney}},
   title = {{PlantNet: NSW flora online}},
   year = {2014},
   url = {http://plantnet.rbgsyd.nsw.gov.au/},
+}
+
+@Misc{RBGSYD_2014,
+  author = {{Royal Botanic Gardens Sydney}},
+  title = {{Plantnet}},
+  year = {2014},
+  url = {http://plantnet.rbgsyd.nsw.gov.au/search/simple.htm},
 }
 
 @Unpublished{Rice_1991,
@@ -941,12 +1226,6 @@
   pages = {41--52},
   publisher = {Elsevier BV},
   doi = {10.1016/s0006-3207(02)00245-8},
-}
-
-@Unpublished{Richards_2008,
-  author = {Ian Wright},
-  year = {2008},
-  title = {{Unpublished data: OzGLOP compilation}},
 }
 
 @Unpublished{Roberts_2006,
@@ -1022,10 +1301,12 @@
   url = {https://florabase.dpaw.wa.gov.au/science/nuytsia/758.pdf},
 }
 
-@Book{SAH_2014,
-  author = {{South Australian Herbarium}},
-  title = {{Flora of South Australia, Volume 4}},
-  year = {2014},
+@Misc{SAH_2014,
+  author = {J. P. Jessop and H. R. Toelken},
+  title = {{Flora of South Australia, 4th edition, 4 vols}},
+  year = {1986},
+  publisher = {Government Printer, Adelaide},
+  note = {Electronic version curated by J. Kellermann, State Herbarium of South Australia.},
 }
 
 @Article{Schmidt_2003,
@@ -1039,16 +1320,44 @@
   doi = {10.1007/s00442-002-1150-y},
 }
 
-@Unpublished{Schulze_2016,
-  author = {Ernst-Detlef Schulze},
-  year = {2008},
-  title = {{Unpublished data: Traits of plant species along the Northern Australian Transect Study}},
+@Article{Schmidt_2003:1,
+  year = {1997},
+  author = {S. SCHMIDT and G.R. STEWART},
+  journal = {Plant, Cell and Environment},
+  title = {{Waterlogging and fire impacts on nitrogen availability and utilization in a subtropical wet heathland (wallum)}},
+  volume = {20},
+  number = {10},
+  pages = {1231--1241},
+  doi = {10.1046/j.1365-3040.1997.d01-20.x},
+}
+
+@Article{Schulze_1998,
+  year = {1998},
+  author = {E. -D. Schulze and R. J. Williams and G. D. Farquhar and W. Schulze and J. Langridge and J. M. Miller and B. H. Walker},
+  title = {{Carbon and nitrogen isotope discrimination and nitrogen nutrition of trees along a rainfall gradient in northern Australia}},
+  journal = {Australian Journal of Plant Physiology},
+  volume = {25},
+  number = {4},
+  pages = {413--425},
+  doi = {10.1071/PP97113},
 }
 
 @Unpublished{Scott_2010,
   author = {Andrew John Scott},
   year = {2010},
   title = {{Unpublished data: Honours Project at La Trobe University}},
+}
+
+@Article{Sendall_2016,
+  year = {2015},
+  author = {Kerrie M. Sendall and Christopher H. Lusk and Peter B. Reich},
+  journal = {Functional Ecology},
+  title = {{Trade-offs in juvenile growth potential vs. shade tolerance among subtropical rain forest trees on soils of contrasting fertility}},
+  volume = {30},
+  number = {6},
+  pages = {845--855},
+  doi = {10.1111/1365-2435.12573},
+  editor = {Natalia Norden},
 }
 
 @TechReport{Seng_1951,
@@ -1069,15 +1378,10 @@
   doi = {10.1016/j.ppees.2012.09.003},
 }
 
-@Article{Specht_1958,
-  author = {RL Specht and P Rayson and ME Jackman},
-  year = {1958},
-  title = {{Dark Island heath (Ninety-mile plain, South Australia). VI. Pyric succession: Changes in composition, coverage, dry weight, and mineral nutrient status}},
-  journal = {Australian Journal of Botany},
-  volume = {6},
-  pages = {59},
-  publisher = {CSIRO Publishing},
-  doi = {10.1071/bt9580059},
+@Unpublished{Standish_2019,
+  year = {2019},
+  author = {Rachel Standish},
+  title = {{unpublished jarrah forest dataset}},
 }
 
 @Article{Thompson_2001,
@@ -1149,25 +1453,15 @@
   url = {https://florabase.dpaw.wa.gov.au/science/nuytsia/692.pdf},
 }
 
-@Article{Venn_2011,
-  author = {Susanna E. Venn and Ken Green and Catherine M. Pickering and John W. Morgan},
-  year = {2011},
-  title = {{Using plant functional traits to explain community composition across a strong environmental filter in Australian alpine snowpatches}},
-  journal = {Plant Ecology},
-  volume = {212},
-  pages = {1491--1499},
-  doi = {10.1007/s11258-011-9923-1},
-}
-
 @Article{Vesk_2004,
-  author = {Peter A. Vesk and David I. Warton and Mark Westoby},
   year = {2004},
-  title = {{Sprouting by semi-arid plants: Testing a dichotomy and predictive traits}},
-  journal = {Oikos},
-  volume = {107},
-  pages = {72--89},
-  publisher = {Wiley-Blackwell},
-  doi = {10.1111/j.0030-1299.2004.13122.x},
+  author = {Peter A. Vesk and Michelle R. Leishman and Mark Westoby},
+  journal = {Journal of Applied Ecology},
+  title = {{Simple traits do not predict grazing response in Australian dry shrublands and woodlands}},
+  volume = {41},
+  number = {1},
+  pages = {22--31},
+  doi = {10.1111/j.1365-2664.2004.00857.x},
 }
 
 @Unpublished{Vesk_2007,
@@ -1209,11 +1503,41 @@
   doi = {10.1007/s00442-003-1231-6},
 }
 
+@Article{Westoby_2003:1,
+  author = {{Westoby} and {M.} and {Rice} and {B.} and {Howell} and {J.}},
+  year = {1990},
+  title = {{Seed Size and Plant Growth Form as Factors in Dispersal Spectra}},
+  journal = {Ecology},
+  volume = {71},
+  pages = {1307--1315},
+  doi = {10.2307/1938268},
+}
+
 @Unpublished{Westoby_2004,
   author = {Mark Westoby},
   year = {2004},
   title = {{Unpublished data: Trait data for plant species at Mt Wellington and Sea Acres}},
-  note = {Collected while at Macquarie University},
+  note = {Collected by a research assistant Erika while at Macquarie University},
+}
+
+@Article{Westoby_2014,
+  author = {Sean M. Gleason and Don W. Butler and Kasia Zieminska and Pawel Waryszak and Mark Westoby},
+  year = {2012},
+  title = {{Stem xylem conductivity is key to plant water balance across Australian angiosperm species}},
+  journal = {Functional Ecology},
+  volume = {26},
+  pages = {343--352},
+  publisher = {Wiley-Blackwell},
+  doi = {10.1111/j.1365-2435.2012.01962.x},
+}
+
+@Article{Westoby_2014:1,
+  year = {2013},
+  author = {Kasia Zieminska and Don W. Butler and Sean M. Gleason and Ian J. Wright and Mark Westoby},
+  journal = {{AoB} {PLANTS}},
+  title = {{Fibre wall and lumen fractions drive wood density variation across 24 Australian angiosperms}},
+  volume = {5},
+  doi = {10.1093/aobpla/plt046},
 }
 
 @Unpublished{Westoby_2016,
@@ -1229,6 +1553,17 @@
   publisher = {{Australian Biological Resources Study ; University of Western Australia Press}},
   address = {Canberra, A.C.T. : Crawley, W.A},
   isbn = {9780642568168},
+}
+
+@Article{Wills_2018,
+  year = {2018},
+  author = {Jarrah Wills and John Herbohn and Jing Hu and Shawkat Sohel and Jack Baynes and Jennifer Firn},
+  title = {{Tree leaf trade-offs are stronger for sub-canopy trees: leaf traits reveal little about growth rates in canopy trees}},
+  journal = {Ecological Applications},
+  volume = {28},
+  number = {4},
+  pages = {1116--1125},
+  doi = {doi.org/10.1002/eap.1715},
 }
 
 @Article{Wilson_2008,
